--- a/example-advanced/src/resource.rc
+++ b/example-advanced/src/resource.rc
@@ -6,18 +6,17 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 //
 // Icon resources
 //
-IDI_ICON1          ICON           ".\\Windows.ico"
-IDI_ICON2          ICON           ".\\Spout.ico"
+IDI_ICON1          ICON           "Windows.ico"
+IDI_ICON2          ICON           "Spout.ico"
 
 //
 // Image resources
 //
-IDC_IMAGEFILE0 RCDATA ".\\lighthouse.jpg"
+IDB_IMAGEFILE0 RCDATA "lighthouse.jpg"
 
 //
-// Version Information resources
+// Version Information
 //
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 VS_VERSION_INFO VERSIONINFO
     FILEVERSION     2,0,0,0
     PRODUCTVERSION  2,0,0,0
